--- a/Inlämning 2 - Ida Bengtsson.ipynb
+++ b/Inlämning 2 - Ida Bengtsson.ipynb
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "id": "e3f3419f",
    "metadata": {},
    "outputs": [
@@ -745,18 +745,18 @@
    "id": "6f914349",
    "metadata": {},
    "source": [
-    "Majoriteten av färgvärdet i datan är 0 (svart) och lite är 255 (vit). Väldigt lite är mittemellan. Betyder att bilderna har hög kontrast och är \"rena\" (\"kladdiga\" bilder hade haft hög andel vit/grått). "
+    "Majoriteten av färgvärdet i datan är 0 (svart/mörk) och lite är 255 (vit/ljus). Väldigt lite är mittemellan-värden (gråa). "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "26eb072e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# normaliserar pixelvärdena till skalan 0-1. Det här förändrar inte relationerna mellan datapunkterna, det förändrar bara skalan till att bli mindre. \n",
-    "# Om värderna är stora kan gradienterna också blir stora för modeller som arbetar med gradienter (typ Logistic Regression och SVM) vilket leder till långsammare konvergens. \n",
+    "# Vilket gör det lättare för matten i många modeller att arbeta.   \n",
     "# Det här går att göra på all data, då ingen faktisk \"kunskap\" om datasettet krävs (dvs, vi \"tjuvkikar inte på något\") - allt delas bara med 255. \n",
     "\n",
     "X_train = X_train.astype(np.float32) / 255.0\n",
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "e70b1b94",
    "metadata": {},
    "outputs": [
@@ -1568,7 +1568,7 @@
     "pipe_lr = Pipeline([\n",
     "    (\"scaler\", StandardScaler()), # det behövs egentligen inte en scaler här, eftersom jag redan gjort om till 0-1, samt att det inte är olika \"skala\" på datan \n",
     "                                  # (tex inte \"4 rum\" & \"pris 4 000 000\") som behöver \"plattas ut\"\n",
-    "                                  # men vi har ju övat på det, så tyckte det var kul att ta med :) \n",
+    "                                  # men vi har pratat om det på lektionerna, så tyckte det var kul att ta med :) \n",
     "    (\"model\", LogisticRegression(\n",
     "        max_iter=1000   #Läste online att detta skulle vara ett bra värde för MNIST för att modellen ska hinna konvergera\n",
     "        # man skulle också kunna sätta tex solver för att vara säker på att modellen är replikerbar (om de tex ändrar defaultbeteendena) \n",
@@ -1763,7 +1763,7 @@
     "#     \"model__C\": [1, 3, *10*],\n",
     "#     \"model__gamma\": [*\"scale\"*, 0.01]\n",
     "# } \n",
-    "# körde denna med 3 folds\n",
+    "# körde denna med 3 folds, inte med predefined split\n",
     "# scale = 0.0015484521883518858"
    ]
   },
